--- a/scripts/R01_mice_16s_zymo.Rmd
+++ b/scripts/R01_mice_16s_zymo.Rmd
@@ -54,28 +54,7 @@ alpha_healthy_days <-meta %>%
 ```
 
 
-```{r}
-# the same version as above but with p value spelled out
-meta %>% 
-  mutate(day = factor(day)) %>% 
-  arrange(abx_treatment,desc(diet_treatment),  day) %>% 
-  mutate(xvar = str_glue('{abx_treatment}__{diet_treatment}__{day}')) %>% 
-  mutate(grp = str_glue('{abx_treatment}__{diet_treatment}')) %>% 
-  mutate(grp = factor(grp, levels = c('PBS__vehicle','PBS__sucrose','biapenem__vehicle','biapenem__sucrose'))) %>%    
-  ggboxplot(x = 'xvar', y = 'simpson_reciprocal',add = 'jitter', 
-             xlab = '', ylab = 'alpha diversity(simpson reciprocal)',, add.params = list(alpha = 0.5, shape = 16),
-            width = 0.6,color  = 'grp')+
-   scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
-  stat_compare_means(comparisons = list(
-    c('biapenem__vehicle__3','biapenem__sucrose__3'), 
-    c('PBS__vehicle__3','PBS__sucrose__3'),
-    c('PBS__vehicle__3','biapenem__vehicle__3')
-    ),
-    label= "p.value", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  scale_x_discrete(labels=rep(c(0,3,6),4)) + 
-  scale_y_sqrt() +
-  theme_light()
-```
+
 ```{r}
 # it would be good to have a metric of the effect size of the alpha reduction because of the abx treatment
   # the difference of the median in the two groups
@@ -99,7 +78,34 @@ median_pbs_d3 - median_abx_d3
 
 sucrose-only doesn’t reduce diversity on day 3, compared with vehicle, but biapenem-only does.  However, sucrose doesn’t further reduce diversity beyond the biapenem effect on day 3. 
 
-## delta
+## d3 VS d0
+
+```{r}
+# what I really care is the change from day 0 to day 3
+alpha_change <-  meta %>% 
+  mutate(day = factor(day)) %>% 
+  arrange(abx_treatment,desc(diet_treatment),  day) %>% 
+  mutate(xvar = str_glue('{abx_treatment}__{diet_treatment}__{day}')) %>% 
+  mutate(grp = str_glue('{abx_treatment}__{diet_treatment}')) %>% 
+  mutate(grp = factor(grp, levels = c('PBS__vehicle','PBS__sucrose','biapenem__vehicle','biapenem__sucrose'))) %>%    
+  ggboxplot(x = 'xvar', y = 'simpson_reciprocal',add = 'jitter', 
+             xlab = '', ylab = 'alpha diversity(simpson reciprocal)',, add.params = list(alpha = 0.5, shape = 16),
+            width = 0.6,color  = 'grp')+
+   scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
+  stat_compare_means(comparisons = list(
+    c('biapenem__vehicle__0','biapenem__vehicle__3'), 
+    c('biapenem__sucrose__0','biapenem__sucrose__3'),
+    c('PBS__vehicle__0','PBS__vehicle__3'),
+    c('PBS__sucrose__0','PBS__sucrose__3')
+    ),paired = T,
+    label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
+  scale_x_discrete(labels=rep(c(0,3,6),4)) + 
+  scale_y_sqrt() +
+  theme_light() +
+  theme(axis.text =  element_text(size = 10, angle = 0, hjust = 1),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3)
+alpha_change 
+```
+
 
 ```{r}
 # what we actually care is the difference between day 3 and day 0 in the two groups
@@ -107,11 +113,34 @@ alpha_wide <- meta %>%
   select(experiment_no:day, mouse_no,abx_treatment:simpson_reciprocal) %>% 
   mutate(day = str_glue('d{day}')) %>% 
   spread('day','simpson_reciprocal') %>% 
-  mutate(delta_0_3 = d3 - d0,
-         delta_0_6 = d6 - d0) %>% 
-  gather('grp','deltas', delta_0_3:delta_0_6)
+  # mutate(delta_0_3 = d3 - d0,
+  #        delta_0_6 = d6 - d0) %>% 
+  # gather('grp','deltas', delta_0_3:delta_0_6)
+  mutate(fc_0_3 = d3 / d0,
+         fc_0_6 = d6 / d0) %>% 
+  gather('grp','fc', fc_0_3:fc_0_6)
 ```
 sucrose_only doesn't have much effects. abx_only has a much bigger reduction in the alpha diversity after abx trt
+
+## fold change d3/d0 
+
+```{r}
+alpha_wide %>% 
+  mutate(trt = str_glue('{abx_treatment}__{diet_treatment}')) %>% 
+  mutate(trt = factor(trt, levels = c('PBS__vehicle','PBS__sucrose','biapenem__vehicle','biapenem__sucrose'))) %>% 
+  ggboxplot(x = 'trt', y = 'fc', add = 'jitter', color = 'trt', facet.by = 'grp') +
+   scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
+  stat_compare_means(comparisons = list(
+    c('PBS__vehicle','biapenem__vehicle'), 
+    c('biapenem__vehicle','biapenem__sucrose'),
+    c('PBS__vehicle','PBS__sucrose')
+    ),
+    label= "p.signif", method= 't.test',tip.length = 0.04,exact=T,correct=T) +
+  geom_hline(yintercept = 1, color = 'red') +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+```
+
+
 
 ## delta plots
 
